# rust-web-async

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
src/: main.rs  proxy.rs
src/db/: db.rs
