[package]
name = "rust-web-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"
time = "0.3.9"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
web3 = "0.17.0"
log = "0.4"

# [dev-dependencies]
# cargo-watch = "8.1.1"